# whatalog

./: README.md  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: customer_form.html  customers.html  index.html  product_form.html
migrations/: env.py
migrations/versions/: 238fddf58564_refactor_to_application_factory_and_.py  a70b9213949a_criação_inicial_das_tabelas_de_produtos_.py  e9ce876402af_change_price_column_to_real_for_strict_.py
tests/: conftest.py  test_customer_routes.py  test_routes.py
