[project]
name = "whatalog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = "."
